--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>Rock Paper Scissors</h1>
     <div class="choices">
       <div class="choice" id="rock">
-        <img src="C:\Users\sanni\OneDrive\Desktop\Bootstrap-workshop\RockPaper\rock.png" />
+        <img src="rock.png" />
       </div>
       <div class="choice" id="paper">
-        <img src="C:\Users\sanni\OneDrive\Desktop\Bootstrap-workshop\RockPaper\paper.png" />
+        <img src="paper.png" />
       </div>
       <div class="choice" id="scissors">
-        <img src="C:\Users\sanni\OneDrive\Desktop\Bootstrap-workshop\RockPaper\scissors.png" />
+        <img src="scissors.png" />
       </div>
     </div>
 
