--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="paper.png" />
       </div>
       <div class="choice" id="scissors">
-        <img src="C:\Users\sanni\OneDrive\Desktop\Bootstrap-workshop\scissors.png" />
+        <img src="scissors.png" />
       </div>
     </div>
 
